--- a/templ/login.html
+++ b/templ/login.html
@@ -3,20 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>佰十拾壹中部電資聯合幹部見面：ＲＰＧ解謎</title>
+    <title>佰拾壹中部電資聯合幹部見面：ＲＰＧ解謎</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="@nevik.w39: Hello, World!" />
-    <meta name="keywords" content="nevik.w39 nevikw39" />
+    <meta name="description" content="佰拾壹中部電資聯合幹部見面：ＲＰＧ仿ＣＴＦ解謎" />
+    <meta name="keywords" content="佰拾壹 百十一 中部電資 聯合幹部見面 幹見 RPG CTF 解謎" />
     <meta name="author" content="nevikw39">
-    <!-- <script src="/cdn-cgi/apps/head/LCxvUnUY2GMKXCXJNpQBMF9MhZQ.js"></script> -->
     <link rel="stylesheet" href="https://www.kevinweng.tk/ab/bootstrap.min.css" media="screen" id="stylesheet">
     <link rel="stylesheet" href="https://www.kevinweng.tk/ab/anti-bold.css" media="screen" id="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/png" href="" />
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144209773-1"
-        type="7ed92117b3bbe60f72b196af-text/javascript"></script>
-    <script type="7ed92117b3bbe60f72b196af-text/javascript">
+        type="text/javascript"></script>
+    <script type="text/javascript">
                 window.dataLayer = window.dataLayer || [];
                 function gtag() { dataLayer.push(arguments); }
                 gtag('js', new Date());
@@ -34,6 +33,11 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">芝麻開門</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
+    <script defer src="static/login.js" type="text/javascript"></script>
 </body>
 
 </html>
