--- a/templ/login.html
+++ b/templ/login.html
@@ -27,14 +27,48 @@
     <div class="mx-auto pt-5 col-md-4">
         <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72"
             height="72">
-        <h1 class="h3 mb-3 font-weight-normal">請輸入咒語以繼續</h1>
+        <h1 class="h3 mb-3 font-weight-normal">請輸入咒語以解鎖</h1>
         <label for="inputPassword" class="sr-only">咒語</label>
         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
         <input type="password" id="inputPassword" class="form-control" placeholder="咒語" required>
         <div class="invalid-feedback">密碼錯誤！！ＱＱ</div>
-        <button class="btn btn-lg btn-primary btn-block" id="btnPassword">芝麻開門</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+        <button class="my-3 btn btn-lg btn-success btn-block" id="btnPassword">芝麻開門～～</button>
     </div>
+    <div class="mx-auto col-md-4 card bg-dark">
+        <div class="card-body text-dark">
+            <h5 class="card-title">歡迎各位進入第二關！！</h5>
+            <p class="card-text"></p>
+        </div>
+    </div>
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header alert-warning">
+                    <h5 class="modal-title" id="exampleModalLabel">啊喔 o'_'o</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body bg-warning">就差那麼臨門一腳惹！！再加油</div>
+                <div class="modal-footer bg-warning">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="col-lg-12 p-4">
+            <div class="container text-center">
+                <ul class="list-inline">
+                    <li class="d-inline-block p-1 list-inline-item"><a href="https://www.instagram.com/nevikw39/"
+                            class="fa fa-instagram"></a></li>
+                    <li class="d-inline-block p-1 list-inline-item"><a href="https://github.com/nevikw39/"
+                            class="fa fa-github"></a></li>
+                </ul>
+                <p class="display-5">&copy;2020 @nevikw39</p>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         type="text/javascript"></script>
