--- a/templ/login.html
+++ b/templ/login.html
@@ -34,6 +34,7 @@
         <div class="invalid-feedback">密碼錯誤！！ＱＱ</div>
         <button class="my-3 btn btn-lg btn-success btn-block" id="btnPassword">芝麻開門～～</button>
     </div>
+    <span class="badge badge-info" id="time"></span>
     <div class="mx-auto col-md-4 card bg-dark text-dark border-dark">
         <div class="card-header bg-dark border-dark">nevikw39_0725{}</div>
         <div class="card-body">
