--- a/templ/success.html
+++ b/templ/success.html
@@ -24,9 +24,10 @@
 </head>
 
 <body class="text-center">
-    <section class="d-block">
+    <div class="container">
         <h1 id="cong">Congratulation!!</h1>
-    </section>
+        <canvas id="canvas" class="w-100 h-100"></canvas>
+    </div>
     <div class="d-block">
         <div class="w-100 h-100 overflow-hidden" id="pin">
             <section class="w-100 h-100 position-absolute bg-info">
@@ -42,6 +43,9 @@
                 <h1 class="position-relative" style="top: 50%;">danger</h1>
             </section>
         </div>
+    </div>
+    <div class="container">
+        <h1 id="end"><span class="word">THE</span> <span class="word">END.</span></h1>
     </div>
     <footer>
         <div class="col-lg-12 p-4">
