--- a/templ/success.html
+++ b/templ/success.html
@@ -25,8 +25,9 @@
 
 <body class="text-center">
     <div class="container">
-        <h1 id="cong">Congratulation!!</h1>
         <canvas id="canvas" class="w-100 h-100"></canvas>
+        <div id="trigger0" style="min-height: 1em;"></div>
+        <h1 id="cong">Congratulation!!</h1>
     </div>
     <div class="d-block">
         <div class="w-100 h-100 overflow-hidden" id="pin">
@@ -44,8 +45,21 @@
             </section>
         </div>
     </div>
-    <div class="container">
-        <h1 id="end"><span class="word">THE</span> <span class="word">END.</span></h1>
+    <div id="trigger1"></div>
+    <div class="mx-auto my-5 col-md-4 card bg-primary" id="card">
+        <div class="card-header">nevikw39_0725{}</div>
+        <div class="card-body">
+            <h5 class="card-title">後記</h5>
+            <p class="card-text">
+                這次幹見中，我臨危受命，必須在一週內發想出一組謎題。這項任務說難不難，說易卻也不易。畢竟出得太簡單有辱一中電研，太艱深又失去意義。
+                因此，在百般思考後，我們希望可以設計出由淺入深的問題。入門的部分；基礎的部分是直接把題目放在原始碼的註解中，不過怕小隊員想不到所以也有與隱藏在背景中的暗示；最後其實也不複雜，上網找到費式數列第
+                111 項並求得各位數字和，即為所求（應該沒人用 Python 現場試矩陣快速冪吧？？）。
+            </p>
+        </div>
+    </div>
+    <div class="container" id="divEnd">
+        <h1 id="end"><span class="word">THE</span><span class="word"> </span><span class="word">END</span><span
+                class="word">.</span></h1>
     </div>
     <footer>
         <div class="col-lg-12 p-4">
@@ -64,21 +78,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"
-        integrity="sha512-HzAEuXwhLxwm/Jj+5ecdjzrRVrjuh2ZeIxyT1Ln37TO5pWNMnKBuU7cfd1wvRQ/k86w1oC174Yk1T7aRlBpIcA=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"
-        integrity="sha512-A98SmLRZISk4eIxQBeCm8k0jAcwN3A3lBx4hr7baoMpV1VpxcxlZIhi5fJIZN50sQ5RlCzx8yV+Voy2cR6x0aA=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.velocity.min.js"
-        integrity="sha512-6Fw+pSuqmag+yYx0kMzlwVBy51GAIXyT1S4B0l5yRs+ku5LLKD/kfCOLA9Rer2Y/iBNAoPEiexwlsKKFChhk7Q=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/jquery.ScrollMagic.min.js"
-        integrity="sha512-f031btWm661Twvo3JQ18X5z8epjTu5K4eNcOOYNJs3AKU0wOTGnY1mjXUmfsTJ96lYggbyIg9vdJ7nbjdddtvQ=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"
-        integrity="sha512-elauk8NI35rjTlatfRQxeqmJoieQlfm0W8AeQVps+j+KkMDdaqNxVazFzwyU7uSOyeeVn/VLbGYLwOR/D5I6Kw=="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.velocity.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/jquery.ScrollMagic.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.0/lib/anime.min.js"></script>
     <script defer src="static/success.js" type="text/javascript"></script>
 </body>
