success: Section text

--- a/templ/success.html
+++ b/templ/success.html
@@ -32,29 +32,50 @@
     <div class="d-block">
         <div class="w-100 h-100 overflow-hidden" id="pin">
             <section class="w-100 h-100 position-absolute bg-info">
-                <h1 class="position-relative" style="top: 50%;">info</h1>
+                <h1 class="position-relative" style="top: 50%;">恭喜各位順利完成任務，解出謎題！！</h1>
             </section>
             <section class="w-100 h-100 position-absolute bg-success">
-                <h1 class="position-relative" style="top: 50%;">success</h1>
+                <h1 class="position-relative" style="top: 50%;">祝福各位上幹快樂、社運昌隆！！</h1>
             </section>
             <section class="w-100 h-100 position-absolute bg-warning">
-                <h1 class="position-relative" style="top: 50%;">warning</h1>
+                <h1 class="position-relative" style="top: 50%;">期望各位可以傳承中部電資的精神並發揚光大！！</h1>
             </section>
             <section class="w-100 h-100 position-absolute bg-danger">
-                <h1 class="position-relative" style="top: 50%;">danger</h1>
+                <h1 class="position-relative" style="top: 50%;">提醒各位！！</h1>
             </section>
         </div>
     </div>
     <div id="trigger1"></div>
-    <div class="mx-auto my-5 col-md-4 card bg-primary" id="card">
-        <div class="card-header">nevikw39_0725{}</div>
-        <div class="card-body">
-            <h5 class="card-title">後記</h5>
-            <p class="card-text">
-                這次幹見中，我臨危受命，必須在一週內發想出一組謎題。這項任務說難不難，說易卻也不易。畢竟出得太簡單有辱一中電研，太艱深又失去意義。
-                因此，在百般思考後，我們希望可以設計出由淺入深的問題。入門的部分；基礎的部分是直接把題目放在原始碼的註解中，不過怕小隊員想不到所以也有與隱藏在背景中的暗示；最後其實也不複雜，上網找到費式數列第
-                111 項並求得各位數字和，即為所求（應該沒人用 Python 現場試矩陣快速冪吧？？）。
-            </p>
+    <div class="card-columns">
+        <div class="card bg-secondary text-dark">
+            <div class="card-header">nevikw39_0725{}</div>
+            <div class="card-body">
+                <h5 class="card-title">後記</h5>
+                <p class="card-text">
+                    這次幹見中，我臨危受命，必須在一週內發想出一組謎題。這項任務說難不難，說易卻也不易。畢竟出得太簡單有辱一中電研，太艱深又失去意義。在資訊領域中，CTF
+                    是很知名的解謎遊戲。因此，我們決定仿造該種形式並簡化以符合需要。
+                </p>
+            </div>
+        </div>
+        <div class="card bg-primary">
+            <div class="card-header">nevikw39_0725{}</div>
+            <div class="card-body">
+                <h5 class="card-title">心得</h5>
+                <p class="card-text">
+                    為惹要有逼真的體驗，我著手開發網頁專案。後端伺服器的部分，我嘗試使用
+                    Go，享受它作為一個現代的高階語言的簡潔美學，一方面也是看上他高效的編譯在我爛爛伺服器上應該比
+                    Python 順。後端的部分確實比較繁瑣，我也藉機好好練習，特別大量地運用許多動畫特效。
+                </p>
+            </div>
+        </div>
+        <div class="card bg-light text-dark">
+            <div class="card-header bg-white">nevikw39_0725{}</div>
+            <div class="card-body">
+                <h5 class="card-title">感謝</h5>
+                <p class="card-text">
+                    首先感謝廷翰總是即時的踩下煞車（？還有辛苦地念誠給我不少建議。另外，立宜跟慣性缺席的鈺維大方無私的分享他們猜密碼的策略，增加我對這個太漂亮又簡單的謎底不被輕易猜中的信心。
+                </p>
+            </div>
         </div>
     </div>
     <div class="container" id="divEnd">
