--- a/templ/login.html
+++ b/templ/login.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://www.kevinweng.tk/ab/bootstrap.min.css" media="screen" id="stylesheet">
     <link rel="stylesheet" href="https://www.kevinweng.tk/ab/anti-bold.css" media="screen" id="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="" />
+    <link rel="icon" type="image/png" href="static/favicon.ico" />
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144209773-1"
         type="text/javascript"></script>
     <script type="text/javascript">
@@ -24,16 +24,16 @@
 </head>
 
 <body class="text-center">
-    <div class="mx-auto pt-5 col-md-4" id="form">
-        <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" id="img" width="72"
+    <form class="mx-auto pt-5 col-md-4" id="form" method="post">
+        <img class="mb-4 rounded-circle" src="static/favicon.ico" id="img" width="72"
             height="72">
         <h1 class="h3 mb-3 font-weight-normal" id="title">請輸入咒語以解鎖</h1>
         <label for="inputPassword" class="sr-only">咒語</label>
         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
         <input type="password" id="inputPassword" class="form-control" placeholder="咒語" required>
         <div class="invalid-feedback">密碼錯誤！！ＱＱ</div>
-        <button class="my-3 btn btn-lg btn-success btn-block" id="btnPassword">芝麻開門～～</button>
-    </div>
+        <button class="my-3 btn btn-lg btn-success btn-block" id="btnPassword" type="submit">芝麻開門～～</button>
+    </form>
     <span class="badge badge-info" id="time"></span>
     <div class="mx-auto col-md-4 card bg-dark text-dark border-dark">
         <div class="card-header bg-dark border-dark">nevikw39_0725{}</div>
