--- a/templ/success.html
+++ b/templ/success.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://www.kevinweng.tk/ab/bootstrap.min.css" media="screen" id="stylesheet">
     <link rel="stylesheet" href="https://www.kevinweng.tk/ab/anti-bold.css" media="screen" id="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" type="image/png" href="" />
+    <link rel="icon" type="image/png" href="static/favicon.ico" />
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144209773-1"
         type="text/javascript"></script>
     <script type="text/javascript">
