--- a/templ/login.html
+++ b/templ/login.html
@@ -30,11 +30,11 @@
         <h1 class="h3 mb-3 font-weight-normal" id="title">請輸入咒語以解鎖</h1>
         <label for="inputPassword" class="sr-only">咒語</label>
         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-        <input type="password" id="inputPassword" class="form-control" placeholder="咒語" required>
+        <input type="password" id="inputPassword" class="form-control" placeholder="咒語" required name="pwd" autofocus>
         <div class="invalid-feedback">密碼錯誤！！ＱＱ</div>
         <button class="my-3 btn btn-lg btn-success btn-block" id="btnPassword" type="submit">芝麻開門～～</button>
     </form>
-    <span class="badge badge-info" id="time"></span>
+    <span class="badge badge-info" id="time" style="width: 50px !important;"></span>
     <div class="mx-auto col-md-4 card bg-dark text-dark border-dark">
         <div class="card-header bg-dark border-dark">nevikw39_0725{}</div>
         <div class="card-body">
