--- a/templ/success.html
+++ b/templ/success.html
@@ -62,7 +62,7 @@
             <div class="card-body">
                 <h5 class="card-title">心得</h5>
                 <p class="card-text">
-                    為惹要有逼真的體驗，我著手開發網頁專案。後端伺服器的部分，我嘗試使用
+                    為惹要有逼真的體驗，我著手開發網頁專案。後端伺服器的部分，我嘗試使用比較陌生的
                     Go，享受它作為一個現代的高階語言的簡潔美學，一方面也是看上他高效的編譯在我爛爛伺服器上應該比
                     Python 順。後端的部分確實比較繁瑣，我也藉機好好練習，特別大量地運用許多動畫特效。
                 </p>
