success: Section slides duration

--- a/templ/success.html
+++ b/templ/success.html
@@ -48,7 +48,7 @@
     <div id="trigger1"></div>
     <div class="card-columns">
         <div class="card bg-secondary text-dark">
-            <div class="card-header">nevikw39_0725{}</div>
+            <div class="card-header text-light">nevikw39_0725{}</div>
             <div class="card-body">
                 <h5 class="card-title">後記</h5>
                 <p class="card-text">
