success: Enhance anime experience

--- a/templ/success.html
+++ b/templ/success.html
@@ -32,16 +32,16 @@
     <div class="d-block">
         <div class="w-100 h-100 overflow-hidden" id="pin">
             <section class="w-100 h-100 position-absolute bg-info">
-                <h1 class="position-relative" style="top: 50%;">恭喜各位順利完成任務，解出謎題！！</h1>
+                <h1 class="position-relative text-dark" style="top: 50%;">恭喜各位順利完成任務，解出謎題！！</h1>
             </section>
             <section class="w-100 h-100 position-absolute bg-success">
-                <h1 class="position-relative" style="top: 50%;">祝福各位上幹快樂、社運昌隆！！</h1>
+                <h1 class="position-relative text-light" style="top: 50%;">祝福各位上幹快樂、社運昌隆！！</h1>
             </section>
             <section class="w-100 h-100 position-absolute bg-warning">
-                <h1 class="position-relative" style="top: 50%;">期望各位可以傳承中部電資的精神並發揚光大！！</h1>
+                <h1 class="position-relative text-dark" style="top: 50%;">期望各位可以傳承中部電資的精神並發揚光大！！</h1>
             </section>
             <section class="w-100 h-100 position-absolute bg-danger">
-                <h1 class="position-relative" style="top: 50%;">提醒各位！！</h1>
+                <h1 class="position-relative text-light" style="top: 50%;">提醒各位！！</h1>
             </section>
         </div>
     </div>
