success: Section text login: General

--- a/templ/login.html
+++ b/templ/login.html
@@ -83,7 +83,7 @@
                     <li class="d-inline-block p-1 list-inline-item"><a href="https://github.com/nevikw39/"
                             class="fa fa-github"></a></li>
                 </ul>
-                <p class="display-5">&copy;2020 @nevikw39</p>
+                <p class="display-5">&copy;2020 @nevikw39 ⽜⺙</p>
             </div>
         </div>
     </footer>
