--- a/templ/success.html
+++ b/templ/success.html
@@ -27,27 +27,54 @@
     <div class="container">
         <canvas id="canvas" class="w-100 h-100"></canvas>
         <div id="trigger0" style="min-height: 1em;"></div>
+        <div class="toast bg-secondary text-light mx-auto" role="alert" data-animation="true" data-delay="5000">
+            <div class="toast-body">
+                點擊可以觸發更多煙火。往下滑動以查看更多。
+            </div>
+        </div>
         <h1 id="cong">Congratulation!!</h1>
     </div>
     <div class="d-block">
         <div class="w-100 h-100 overflow-hidden" id="pin">
-            <section class="w-100 h-100 position-absolute bg-info">
+            <section class="w-100 h-100 mb-5 position-absolute bg-info">
+                <div id="trigger2"></div>
                 <h1 class="position-relative text-dark" style="top: 50%;">恭喜各位順利完成任務，解出謎題！！</h1>
             </section>
-            <section class="w-100 h-100 position-absolute bg-success">
+            <section class="w-100 h-100 mb-5 position-absolute bg-success">
+                <div id="trigger3"></div>
                 <h1 class="position-relative text-light" style="top: 50%;">祝福各位上幹快樂、社運昌隆！！</h1>
             </section>
-            <section class="w-100 h-100 position-absolute bg-warning">
+            <section class="w-100 h-100 mb-5 position-absolute bg-warning">
+                <div id="trigger4"></div>
                 <h1 class="position-relative text-dark" style="top: 50%;">期望各位可以傳承中部電資的精神並發揚光大！！</h1>
             </section>
-            <section class="w-100 h-100 position-absolute bg-danger">
-                <h1 class="position-relative text-light" style="top: 50%;">提醒各位！！</h1>
+            <section class="w-100 h-100 mb-5 position-absolute bg-danger">
+                <div id="trigger5"></div>
+                <blockquote class="blockquote position-relative w-75 mx-auto text-light" style="top: 20%;">
+                    <p class="mb-0">
+                        嗨百土的學弟妹們！<br>
+                        身為幹部的你們，<br>
+                        將要面臨種種危機💪<br>
+                        這邊給你們一個小小建議！<br>
+                        那就是--<br>
+                        有問題主動找學長姐求救吧！<br>
+                        像我真的很想要知道你們有沒有問題，進展怎們樣之類的<br>
+                        拍謝啦，我就是一個很愛擔心的老人(´ . .̫ . `)<br>
+                        所以儘管問吧！<br>
+                        學長姐都會好好的告訴你們的！<br>
+                        有前人的經歷，<br>
+                        一定可以給你們滿滿的避雷點（？<br>
+                        以後電資就拜託你們了！<br>
+                        嘎油窩(･ω･)つ⊂(･ω･)
+                    </p>
+                    <footer class="blockquote-footer text-dark">By <cite>漢堡</cite></footer>
+                </blockquote>
             </section>
         </div>
     </div>
     <div id="trigger1"></div>
-    <div class="card-columns">
-        <div class="card bg-secondary text-dark">
+    <div class="card-columns mx-auto">
+        <div class="card bg-secondary text-dark mx-auto">
             <div class="card-header text-light">nevikw39_0725{}</div>
             <div class="card-body">
                 <h5 class="card-title">後記</h5>
@@ -57,8 +84,8 @@
                 </p>
             </div>
         </div>
-        <div class="card bg-primary">
-            <div class="card-header">nevikw39_0725{}</div>
+        <div class="card bg-primary mx-auto">
+            <div class="card-header text-light">nevikw39_0725{}</div>
             <div class="card-body">
                 <h5 class="card-title">心得</h5>
                 <p class="card-text">
@@ -68,7 +95,7 @@
                 </p>
             </div>
         </div>
-        <div class="card bg-light text-dark">
+        <div class="card bg-light text-dark mx-auto">
             <div class="card-header bg-white">nevikw39_0725{}</div>
             <div class="card-body">
                 <h5 class="card-title">感謝</h5>
@@ -91,14 +118,14 @@
                     <li class="d-inline-block p-1 list-inline-item"><a href="https://github.com/nevikw39/"
                             class="fa fa-github"></a></li>
                 </ul>
-                <p class="display-5">&copy;2020 @nevikw39</p>
+                <p class="display-5">&copy;2020 @nevikw39 ⽜⺙</p>
             </div>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
