--- a/templ/success.html
+++ b/templ/success.html
@@ -48,9 +48,9 @@
                 <div id="trigger4"></div>
                 <h1 class="position-relative text-dark" style="top: 50%;">期望各位可以傳承中部電資的精神並發揚光大！！</h1>
             </section>
-            <section class="w-100 h-100 mb-5 position-absolute bg-danger">
+            <section class="w-100 h-100 mb-5 position-absolute bg-danger d-flex align-items-center">
                 <div id="trigger5"></div>
-                <blockquote class="blockquote position-relative w-75 mx-auto text-light" style="top: 20%;">
+                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light" style="top: 20%;">
                     <p class="mb-0">
                         嗨百土的學弟妹們！<br>
                         身為幹部的你們，<br>
