success: Section vertical align

--- a/templ/success.html
+++ b/templ/success.html
@@ -46,7 +46,7 @@
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-warning">
                 <div id="trigger4"></div>
-                <h1 class="position-relative text-dark" style="top: 50%;">期望各位可以傳承中部電資的精神並發揚光大！！</h1>
+                <h1 class="position-relative text-dark">期望各位可以傳承中部電資的精神並發揚光大！！</h1>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-danger d-flex align-items-center">
                 <div id="trigger5"></div>
