success: Section vertical align

--- a/templ/success.html
+++ b/templ/success.html
@@ -50,7 +50,7 @@
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-danger d-flex align-items-center">
                 <div id="trigger5"></div>
-                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light" style="top: 20%;">
+                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
                     <p class="mb-0">
                         嗨百土的學弟妹們！<br>
                         身為幹部的你們，<br>
