success: Section vertical align

--- a/templ/success.html
+++ b/templ/success.html
@@ -36,20 +36,32 @@
     </div>
     <div class="d-block">
         <div class="w-100 h-100 overflow-hidden" id="pin">
-            <section class="w-100 h-100 mb-5 position-absolute bg-info">
-                <div id="trigger2"></div>
+            <section class="w-100 h-100 mb-5 position-absolute bg-info d-flex align-items-center">
+                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
+                    <p class="mb-0">
+                        恭喜各位順利完成任務，解出謎題！！
+                    </p>
+                    <footer class="blockquote-footer text-dark">By <cite></cite></footer>
+                </blockquote>
                 <h1 class="position-relative text-dark" style="top: 50%;">恭喜各位順利完成任務，解出謎題！！</h1>
             </section>
-            <section class="w-100 h-100 mb-5 position-absolute bg-success">
-                <div id="trigger3"></div>
-                <h1 class="position-relative text-light" style="top: 50%;">祝福各位上幹快樂、社運昌隆！！</h1>
+            <section class="w-100 h-100 mb-5 position-absolute bg-success d-flex align-items-center">
+                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
+                    <p class="mb-0">
+                        祝福各位上幹快樂、社運昌隆！！
+                    </p>
+                    <footer class="blockquote-footer text-dark">By <cite></cite></footer>
+                </blockquote>
             </section>
-            <section class="w-100 h-100 mb-5 position-absolute bg-warning">
-                <div id="trigger4"></div>
-                <h1 class="position-relative text-dark">期望各位可以傳承中部電資的精神並發揚光大！！</h1>
+            <section class="w-100 h-100 mb-5 position-absolute bg-warning d-flex align-items-center">
+                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
+                    <p class="mb-0">
+                        期望各位可以傳承中部電資的精神並發揚光大！！
+                    </p>
+                    <footer class="blockquote-footer text-dark">By <cite></cite></footer>
+                </blockquote>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-danger d-flex align-items-center">
-                <div id="trigger5"></div>
                 <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
                     <p class="mb-0">
                         嗨百土的學弟妹們！<br>
