success: Section text color

--- a/templ/success.html
+++ b/templ/success.html
@@ -37,13 +37,12 @@
     <div class="d-block">
         <div class="w-100 h-100 overflow-hidden" id="pin">
             <section class="w-100 h-100 mb-5 position-absolute bg-info d-flex align-items-center">
-                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
+                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-dark">
                     <p class="mb-0">
                         恭喜各位順利完成任務，解出謎題！！
                     </p>
-                    <footer class="blockquote-footer text-dark">By <cite></cite></footer>
+                    <footer class="blockquote-footer text-secondary">By <cite></cite></footer>
                 </blockquote>
-                <h1 class="position-relative text-dark" style="top: 50%;">恭喜各位順利完成任務，解出謎題！！</h1>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-success d-flex align-items-center">
                 <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
@@ -54,11 +53,11 @@
                 </blockquote>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-warning d-flex align-items-center">
-                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
+                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-dark">
                     <p class="mb-0">
                         期望各位可以傳承中部電資的精神並發揚光大！！
                     </p>
-                    <footer class="blockquote-footer text-dark">By <cite></cite></footer>
+                    <footer class="blockquote-footer text-secondary">By <cite></cite></footer>
                 </blockquote>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-danger d-flex align-items-center">
