succes: Remove cite

--- a/templ/success.html
+++ b/templ/success.html
@@ -41,7 +41,7 @@
                     <p class="mb-0">
                         恭喜各位順利完成任務，解出謎題！！
                     </p>
-                    <footer class="blockquote-footer text-secondary">By <cite></cite></footer>
+                    <!-- <footer class="blockquote-footer text-secondary">By <cite></cite></footer> -->
                 </blockquote>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-success d-flex align-items-center">
@@ -49,7 +49,7 @@
                     <p class="mb-0">
                         祝福各位上幹快樂、社運昌隆！！
                     </p>
-                    <footer class="blockquote-footer text-dark">By <cite></cite></footer>
+                    <!-- <footer class="blockquote-footer text-dark">By <cite></cite></footer> -->
                 </blockquote>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-warning d-flex align-items-center">
@@ -57,7 +57,7 @@
                     <p class="mb-0">
                         期望各位可以傳承中部電資的精神並發揚光大！！
                     </p>
-                    <footer class="blockquote-footer text-secondary">By <cite></cite></footer>
+                    <!-- <footer class="blockquote-footer text-secondary">By <cite></cite></footer> -->
                 </blockquote>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-danger d-flex align-items-center">
@@ -78,7 +78,7 @@
                         以後電資就拜託你們了！<br>
                         嘎油窩(･ω･)つ⊂(･ω･)
                     </p>
-                    <footer class="blockquote-footer text-dark">By <cite>漢堡</cite></footer>
+                    <!-- <footer class="blockquote-footer text-dark">By <cite>漢堡</cite></footer> -->
                 </blockquote>
             </section>
         </div>
