success: Section text

--- a/templ/success.html
+++ b/templ/success.html
@@ -55,7 +55,8 @@
             <section class="w-100 h-100 mb-5 position-absolute bg-warning d-flex align-items-center">
                 <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-dark">
                     <p class="mb-0">
-                        期望各位可以傳承中部電資的精神並發揚光大！！
+                        學弟學妹嗨嗨😇
+                        偶是這次活動ㄉ工作人員啦，相信各位小朋友在這次ㄉ活動都認識惹不少友社ㄉ小夥伴，在未來ㄉ一年尼們可能會一起辦活動、喬事情、共患難、獨享福，抑或出現爭執或摩擦☹️，但是最終尼們會學到經驗、甚至獲得知心好友，並感受那股屬於電資研人的熱血與驕傲，祝福尼們也能夠從中學習、銳變、成長！
                     </p>
                     <!-- <footer class="blockquote-footer text-secondary">By <cite></cite></footer> -->
                 </blockquote>
