success: Section list

--- a/templ/success.html
+++ b/templ/success.html
@@ -37,12 +37,19 @@
         <h1 id="cong">Congratulation!!</h1>
         <div class="w-100 h-100 overflow-hidden" id="pin">
             <section class="w-100 h-100 mb-5 position-absolute bg-info d-flex align-items-center">
-                <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-dark">
-                    <p class="mb-0">
-                        恭喜各位順利完成任務，解出謎題！！
-                    </p>
-                    <!-- <footer class="blockquote-footer text-secondary">By <cite></cite></footer> -->
-                </blockquote>
+                <ul class="list-group position-relative w-75 mx-auto my-auto">
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">姓名</span>萬人迷</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">性別</span>男</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">身高</span>182cm</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">體重</span>70kg</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">生日</span>7/25</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">星座</span>獅子座</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">年紀</span>27歲</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">職業</span>軟體工程師</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">月收入</span>8萬</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">興趣</span>寫程式、遊戲、摸索電子產品</li>
+                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">擅長的運動</span>籃球</li>
+                </ul> 
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-success d-flex align-items-center">
                 <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
