--- a/templ/success.html
+++ b/templ/success.html
@@ -36,20 +36,68 @@
         </div>
         <h1 id="cong">Congratulation!!</h1>
         <div class="w-100 h-100 overflow-hidden" id="pin">
-            <section class="w-100 h-100 mb-5 position-absolute bg-info d-flex align-items-center">
-                <ul class="list-group position-relative w-75 mx-auto my-auto">
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">姓名</span>萬人迷</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">性別</span>男</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">身高</span>182cm</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">體重</span>70kg</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">生日</span>7/25</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">星座</span>獅子座</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">年紀</span>27歲</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">職業</span>軟體工程師</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">月收入</span>8萬</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">興趣</span>寫程式、遊戲、摸索電子產品</li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center"><span class="badge badge-primary badge-pill">擅長的運動</span>籃球</li>
-                </ul> 
+            <section class="w-100 h-100 mb-5 position-absolute bg-info d-flex flex-column align-items-center">
+                <h2 class="text-dark mx-auto my-auto">RPG</h2>
+                <table
+                    class="table table-striped table-hover bg-gradient-info text-dark position-relative col-lg-6 mx-auto my-auto">
+                    <tbody>
+                        <tr>
+                            <th scope="row">姓名</th>
+                            <td>萬人迷
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">性別</th>
+                            <td>男
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">身高</th>
+                            <td>182cm
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">體重</th>
+                            <td>70kg
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">生日</th>
+                            <td>7/25
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">星座</th>
+                            <td>獅子座
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">年紀</th>
+                            <td>27歲
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">職業</th>
+                            <td>軟體工程師
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">月收入</th>
+                            <td>8萬
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">興趣</th>
+                            <td>寫程式、遊戲、摸索電子產品
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">擅長的運動</th>
+                            <td>籃球
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-success d-flex align-items-center">
                 <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
@@ -62,7 +110,7 @@
             <section class="w-100 h-100 mb-5 position-absolute bg-warning d-flex align-items-center">
                 <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-dark">
                     <p class="mb-0">
-                        學弟學妹嗨嗨😇
+                        學弟學妹嗨嗨😇<br>
                         偶是這次活動ㄉ工作人員啦，相信各位小朋友在這次ㄉ活動都認識惹不少友社ㄉ小夥伴，在未來ㄉ一年尼們可能會一起辦活動、喬事情、共患難、獨享福，抑或出現爭執或摩擦☹️，但是最終尼們會學到經驗、甚至獲得知心好友，並感受那股屬於電資研人的熱血與驕傲，祝福尼們也能夠從中學習、銳變、成長！
                     </p>
                     <!-- <footer class="blockquote-footer text-secondary">By <cite></cite></footer> -->
@@ -132,10 +180,12 @@
         <div class="col-lg-12 p-4">
             <div class="container text-center">
                 <ul class="list-inline">
-                    <li class="d-inline-block p-1 list-inline-item"><a href="https://www.instagram.com/nevikw39/"
-                            class="fa fa-instagram"></a></li>
                     <li class="d-inline-block p-1 list-inline-item"><a href="https://github.com/nevikw39/"
                             class="fa fa-github"></a></li>
+                    <li class="d-inline-block p-1 list-inline-item"><a href="https://t.me/nevikw39/"
+                            class="fa fa-telegram"></a></li>
+                    <li class="d-inline-block p-1 list-inline-item"><a href="https://www.instagram.com/nevikw39/"
+                            class="fa fa-instagram"></a></li>
                 </ul>
                 <p class="display-5">&copy;2020 @nevikw39 ⽜⺙</p>
             </div>
