success: Section cite

--- a/templ/success.html
+++ b/templ/success.html
@@ -37,7 +37,6 @@
         <h1 id="cong">Congratulation!!</h1>
         <div class="w-100 h-100 overflow-hidden" id="pin">
             <section class="w-100 h-100 mb-5 position-absolute bg-info d-flex flex-column align-items-center">
-                <h2 class="text-dark mx-auto my-auto">RPG</h2>
                 <table
                     class="table table-striped table-hover bg-gradient-info text-dark position-relative col-lg-6 mx-auto my-auto">
                     <tbody>
@@ -98,6 +97,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <footer class="blockquote-footer text-dark mx-auto my-auto">By <cite>妮妮</cite></footer>
             </section>
             <section class="w-100 h-100 mb-5 position-absolute bg-success d-flex align-items-center">
                 <blockquote class="blockquote position-relative w-75 mx-auto my-auto text-light">
