--- a/templ/login.html
+++ b/templ/login.html
@@ -47,8 +47,8 @@
         <button class="my-3 btn btn-lg btn-success btn-block" id="btnPassword" type="submit">芝麻開門～～</button>
     </form>
     <span class="badge badge-info" id="time" style="width: 50px !important;"></span>
-    <div class="mx-auto my-5 col-md-4 card bg-dark text-dark border-dark">
-        <div class="card-header bg-dark border-dark">nevikw39_0725{}</div>
+    <div class="mx-auto my-5 col-md-4 card bg-dark border-light text-dark">
+        <div class="card-header bg-dark border-light">nevikw39_0725{}</div>
         <div class="card-body">
             <h5 class="card-title">歡迎各位進入第二關！！</h5>
             <p class="card-text">
@@ -61,9 +61,9 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header alert-warning">
-                    <h5 class="modal-title" id="exampleModalLabel">啊喔 o'_'o</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
+                    <h5 class="modal-title">啊喔 o'_'o</h5>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
                     </button>
                 </div>
                 <div class="modal-body bg-warning text-dark">啊哈哈，這還不是正確答案喔！！然而方向是正確喔 o'_'o 就差那麼臨門一腳惹！！想想看，這個數字似乎可以代表？？
