--- a/templ/login.html
+++ b/templ/login.html
@@ -7,6 +7,9 @@
             S(9487) = 9 + 4 + 8 + 7 = 28
             S(198964) = 1 + 9 + 8 + 9 + 6 + 4 = 37
         現在，最後一個提示：「S(F_{111}) = '?'」。 加油！！
+
+        想一想，有迷有 O(1) 的解法呢？？
+        https://blog.yangjerry.tw/2019/01/31/fibonacci-is-bigO1/
     </title><meta content="width=device-width,initial-scale=1" name="viewport"><meta content="IE=edge" http-equiv="X-UA-Compatible"><meta content="佰拾壹中部電資聯合幹部見面：ＲＰＧ仿ＣＴＦ解謎" name="description"><meta content="佰拾壹 百十一 中部電資 聯合幹部見面 幹見 RPG CTF 解謎" name="keywords"><meta content="nevikw39" name="author"><link href="https://www.kevinweng.tk/ab/bootstrap.min.css" rel="stylesheet" id="stylesheet" media="screen"><link href="https://www.kevinweng.tk/ab/anti-bold.css" rel="stylesheet" id="stylesheet" media="screen"><link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"><link href="static/favicon.ico" rel="icon" type="image/png"><!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144209773-1"
         type="text/javascript"></script>
     <script type="text/javascript">
